@@ -1,4 +1,6 @@
 
+$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/AUTHORS,v 1.2 2002-08-31 17:15:02 merunka Exp $
+
 Authors of jnettop
 
 Jakub Skopal:
