@@ -1,3 +1,4 @@
+# $Header: /home/jakubs/DEV/jnettop-conversion/jnettop/Makefile.am,v 1.3 2002-08-31 17:15:02 merunka Exp $
 
 INCLUDES = -I$(top_srcdir)/include @GLIB_CFLAGS@
 LDFLAGS = @GLIB_LIBS@ @NSL_LIBS@ @SOCKET_LIBS@
