@@ -78,3 +78,6 @@ problems on a very busy server which would cause various packets to be dropped.
 Copyright (C) 2002 Jakub Skopal
 Portions of the package are taken from the tcpdump project and their rights are
 held by their respective owners stated in the beginning of the files.
+
+$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/README,v 1.5 2002-08-31 17:15:03 merunka Exp $
+
