@@ -1,3 +1,5 @@
+2002-08-31:	I added -b switch for bits/bytes per second
+
 2002-08-28:	Package is now compilable under FreeBSD, Solaris, Debian and on
 		various CPUs. See PORTING file.
 
@@ -7,3 +9,5 @@
 		separate in/out accounting
 
 2002-08-22:	The package is entirely new.
+
+$Header: /home/jakubs/DEV/jnettop-conversion/jnettop/NEWS,v 1.3 2002-08-31 17:15:03 merunka Exp $
